--- a/style.css
+++ b/style.css
@@ -12,3 +12,11 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: blog,education
 Text Domain: philosophy
 */
+.header__logo h1{
+	margin: 0px;
+	font-weight: bold;
+}
+.header__logo h1 a{
+	text-decoration: none;
+	color: #fff;
+}
